# simple-rag

./: .gitignore  README.md
backend/: .env-sample  cli.py  main.py  pyproject.toml
backend/app/: settings.py
backend/app/api/: chat.py  models.py
backend/app/api/routers/: vercel_response.py
backend/app/engine/: engine.py  generate.py  index.py
backend/app/engine/loaders/: __init__.py  file.py
backend/config/: loaders.yaml
